unpackaged/main/default/objects/EventApi__Registration_Item__c/EventApi__Registration_Item__c.object-meta.xml
<CustomObject>
    <description>Registration Items store the various products and break-out sessions for an Attendee.</description>
    <label>Registration Item</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Registration Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registration Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>