unpackaged/main/default/objects/EventApi__Registration_Item__c/fields/EventApi__Attendee__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Attendee__c</fullName>
    <description>** Required ** Master-detail link to the related Attendee.</description>
    <inlineHelpText>** Required ** Master-detail link to the related Attendee.</inlineHelpText>
    <label>Attendee</label>
    <referenceTo>EventApi__Attendee__c</referenceTo>
    <relationshipLabel>Registration Items</relationshipLabel>
    <relationshipName>Registration_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>