unpackaged/main/default/objects/EventApi__Registration_Item__c/fields/EventApi__Date__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Date__c</fullName>
    <description>** System Calculated ** The schedule date.</description>
    <formula>DATEVALUE( EventApi__Schedule_Item__r.EventApi__Start_Date_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>** System Calculated ** The schedule date.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>