unpackaged/main/default/objects/EventApi__Registration_Item__c/fields/EventApi__Discount__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Discount__c</fullName>
    <description>** System Calculated ** Item list price - sale price. (Disregard this field if the item is a tax)</description>
    <formula>EventApi__List_Price__c - EventApi__Sale_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>** System Calculated ** Item list price - sale price. (Disregard this field if the item is a tax)</inlineHelpText>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>