unpackaged/main/default/objects/EventApi__Registration_Item__c/fields/EventApi__End_Time__c.field-meta.xml
<CustomField>
    <fullName>EventApi__End_Time__c</fullName>
    <description>** System Calculated ** The scheduled end time.</description>
    <formula>EventApi__Schedule_Item__r.EventApi__Session_End_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>** System Calculated ** The scheduled end time.</inlineHelpText>
    <label>End Time</label>
    <type>Text</type>
</CustomField>