unpackaged/main/default/objects/EventApi__Registration_Item__c/fields/EventApi__Is_Checked_In__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Checked_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Registration Item and correspondent Attendee is considered to be/was in attendance for the Event. Default unchecked.</description>
    <label>Is Checked In</label>
    <type>Checkbox</type>
</CustomField>