unpackaged/main/default/objects/EventApi__Registration_Item__c/fields/EventApi__Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Primary__c</fullName>
    <description>** System Calculated ** Indicates that the registration item is the attendees primary ticket type.</description>
    <formula>IF (OR(EventApi__Attendee__r.EventApi__Ticket_Type__c == EventApi__Ticket_Type__c, EventApi__Ticket_Type__r.EventApi__Event__c != null &amp;&amp; EventApi__Schedule_Item__c  == null), true, false)</formula>
    <inlineHelpText>** System Calculated ** Indicates that the registration item is the attendees primary ticket type.</inlineHelpText>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>