unpackaged/main/default/objects/EventApi__Registration_Item__c/fields/EventApi__Item__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the item purchased.</description>
    <inlineHelpText>Link to the item purchased.</inlineHelpText>
    <label>Item</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipLabel>Registration Items</relationshipLabel>
    <relationshipName>Registration_Items</relationshipName>
    <type>Lookup</type>
</CustomField>