unpackaged/main/default/objects/EventApi__Registration_Item__c/fields/EventApi__Item_Class__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Item_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** Registration item class.</description>
    <inlineHelpText>** System Calculated ** Registration item class.</inlineHelpText>
    <label>Item Class</label>
    <referenceTo>OrderApi__Item_Class__c</referenceTo>
    <relationshipLabel>Registration Items</relationshipLabel>
    <relationshipName>Registration_Items</relationshipName>
    <type>Lookup</type>
</CustomField>