unpackaged/main/default/objects/EventApi__Registration_Item__c/fields/EventApi__Line_Description__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Line_Description__c</fullName>
    <description>** System Calculated ** Derived from the parent sales order line.</description>
    <inlineHelpText>** System Calculated ** Derived from the parent sales order line.</inlineHelpText>
    <label>Line Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>