unpackaged/main/default/objects/EventApi__Registration_Item__c/fields/EventApi__List_Price__c.field-meta.xml
<CustomField>
    <fullName>EventApi__List_Price__c</fullName>
    <description>** System Calculated ** The registration item&#39;s list price.</description>
    <formula>EventApi__Item__r.OrderApi__Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>** System Calculated ** The registration item&#39;s list price.</inlineHelpText>
    <label>List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>