unpackaged/main/default/objects/EventApi__Registration_Item__c/fields/EventApi__Price_Override__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Price_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>** System Calculated ** Derived from the parent sales order line.</description>
    <inlineHelpText>** System Calculated ** Derived from the parent sales order line.</inlineHelpText>
    <label>Price Override</label>
    <type>Checkbox</type>
</CustomField>