unpackaged/main/default/objects/EventApi__Registration_Item__c/fields/EventApi__Price_Rule__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Price_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** The price rule applied when the attendee purchased the registration item.</description>
    <inlineHelpText>** System Calculated ** The price rule applied when the attendee purchased the registration item.</inlineHelpText>
    <label>Price Rule</label>
    <referenceTo>OrderApi__Price_Rule__c</referenceTo>
    <relationshipLabel>Registration Items</relationshipLabel>
    <relationshipName>Registration_Items</relationshipName>
    <type>Lookup</type>
</CustomField>