unpackaged/main/default/objects/EventApi__Registration_Item__c/fields/EventApi__Quantity__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The quantity sold.</description>
    <inlineHelpText>The quantity sold.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>