unpackaged/main/default/objects/EventApi__Registration_Item__c/fields/EventApi__Registration_Item__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Registration_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to related &quot;Parent Registration Item&quot;.</description>
    <inlineHelpText>Links to related &quot;Parent Registration Item&quot;.</inlineHelpText>
    <label>Registration Item</label>
    <referenceTo>EventApi__Registration_Item__c</referenceTo>
    <relationshipLabel>Registration Items</relationshipLabel>
    <relationshipName>Registration_Items</relationshipName>
    <type>Lookup</type>
</CustomField>