unpackaged/main/default/objects/EventApi__Registration_Item__c/fields/EventApi__Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Sale_Price__c</fullName>
    <description>** System Calculated ** The sale price per unit for the registration item.</description>
    <inlineHelpText>** System Calculated ** The sale price per unit for the registration item.</inlineHelpText>
    <label>Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>