unpackaged/main/default/objects/EventApi__Registration_Item__c/fields/EventApi__Sales_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Sales_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to the source sales order line that created the registration item.</description>
    <inlineHelpText>Links to the source sales order line that created the registration item.</inlineHelpText>
    <label>Sales Order Line (Source)</label>
    <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
    <relationshipLabel>Registration Items</relationshipLabel>
    <relationshipName>Registration_Items</relationshipName>
    <type>Lookup</type>
</CustomField>