unpackaged/main/default/objects/EventApi__Registration_Item__c/fields/EventApi__Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Sales_Order_Number__c</fullName>
    <description>** System Calculated ** The sales order number.</description>
    <formula>EventApi__Sales_Order__r.Name</formula>
    <inlineHelpText>** System Calculated ** The sales order number.</inlineHelpText>
    <label>Sales Order Number</label>
    <type>Text</type>
</CustomField>