unpackaged/main/default/objects/EventApi__Registration_Item__c/fields/EventApi__Schedule_Item__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Schedule_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the related schedule item.</description>
    <inlineHelpText>Link to the related schedule item.</inlineHelpText>
    <label>Schedule Item</label>
    <referenceTo>EventApi__Schedule_Item__c</referenceTo>
    <relationshipLabel>Registered Attendees</relationshipLabel>
    <relationshipName>Registration_Items</relationshipName>
    <type>Lookup</type>
</CustomField>