unpackaged/main/default/objects/EventApi__Registration_Item__c/fields/EventApi__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Start_Time__c</fullName>
    <description>** System Calculated ** The scheduled start time.</description>
    <formula>EventApi__Schedule_Item__r.EventApi__Session_Start_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>** System Calculated ** The scheduled start time.</inlineHelpText>
    <label>Start Time</label>
    <type>Text</type>
</CustomField>