unpackaged/main/default/objects/EventApi__Registration_Item__c/fields/EventApi__Subtotal__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Subtotal__c</fullName>
    <description>** System Calculated ** Quantity * Sale Price.</description>
    <formula>EventApi__Quantity__c *  EventApi__Sale_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>** System Calculated ** Quantity * Sale Price.</inlineHelpText>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>