unpackaged/main/default/objects/EventApi__Registration_Item__c/fields/EventApi__Total__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Total__c</fullName>
    <description>** System Calculated ** The total price for the registration item.</description>
    <inlineHelpText>** System Calculated ** The total price for the registration item.</inlineHelpText>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>