unpackaged/main/default/objects/EventApi__Registration_Item__c/fields/EventApi__Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Transaction_Date__c</fullName>
    <description>** System Calculated ** The date the sales order was posted.</description>
    <formula>EventApi__Sales_Order__r.OrderApi__Posted_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>** System Calculated ** The date the sales order was posted.</inlineHelpText>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>