unpackaged/main/default/objects/EventApi__Registration_Item__c/fields/EventApi__Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Transaction_Type__c</fullName>
    <description>** System Calculated ** The transaction type, either &quot;Invoice&quot; or &quot;Receipt&quot;.</description>
    <formula>TEXT(EventApi__Sales_Order__r.OrderApi__Posting_Entity__c)</formula>
    <inlineHelpText>** System Calculated ** The transaction type, either &quot;Invoice&quot; or &quot;Receipt&quot;.</inlineHelpText>
    <label>Transaction Type</label>
    <type>Text</type>
</CustomField>