unpackaged/main/default/objects/EventApi__Registration_Item__c/fields/EventApi__Transfer__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check the box to transfer the registration item to another Attendee.</description>
    <inlineHelpText>Check the box to transfer the registration item to another Attendee.</inlineHelpText>
    <label>Transfer</label>
    <type>Checkbox</type>
</CustomField>