unpackaged/main/default/objects/EventApi__Registration_Item__c/fields/EventApi__Transfer_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Transfer_Contact_Email__c</fullName>
    <description>** Conditionally Required ** The email address for the contact the registration item is being transferred to. Required for transfer.</description>
    <inlineHelpText>** Conditionally Required ** The email address for the contact the registration item is being transferred to. Required for transfer.</inlineHelpText>
    <label>Transfer Contact Email</label>
    <type>Email</type>
</CustomField>