unpackaged/main/default/objects/EventApi__Registration_Item__c/fields/EventApi__Transfer_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Transfer_Contact_Name__c</fullName>
    <description>** Conditionally Required ** The name of the contact that the registration item is being transfered to. Required for transfer.</description>
    <inlineHelpText>** Conditionally Required ** The name of the contact that the registration item is being transfered to. Required for transfer.</inlineHelpText>
    <label>Transfer Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>