unpackaged/main/default/objects/EventApi__Registration_Item__c/fields/EventApi__Transfer_Fee__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Transfer_Fee__c</fullName>
    <description>Registration items may be enabled for transfer depending on your event configurations. If the registration item is transfered the appropriate fees will be defined in this field.</description>
    <inlineHelpText>Registration items may be enabled for transfer depending on your event configurations. If the registration item is transfered the appropriate fees will be defined in this field.</inlineHelpText>
    <label>Transfer Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>