unpackaged/main/default/objects/EventApi__Registration_Item__c/fields/FON_Has_Schedule__c.field-meta.xml
<CustomField>
    <fullName>FON_Has_Schedule__c</fullName>
    <formula>IF(EventApi__Schedule_Item__c !=null,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Schedule</label>
    <type>Checkbox</type>
</CustomField>