unpackaged/main/default/objects/EventApi__Registration_Item__c/fields/LTE__Primary_Group_Ticket_Registration_Item__c.field-meta.xml
<CustomField>
    <fullName>LTE__Primary_Group_Ticket_Registration_Item__c</fullName>
    <description>**System Calculated** Primary registration item id of group ticket type guest attendees.</description>
    <inlineHelpText>**System Calculated** Primary registration item id of group ticket type guest attendees.</inlineHelpText>
    <label>SYSTEM</label>
    <length>18</length>
    <type>Text</type>
</CustomField>